--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="keywords" content="manami, roy, mroy, math, Oklahoma, Fordham, University, OU,  Number theory, Automorphic forms, elliptic curves" />
     <meta name="author" content="Manami Roy" />
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
-    <title>Manami Roy, Fordham University, Mathematics</title>
+    <title>Manami Roy, Lafayette College, Mathematics</title>
     <style>
 	@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700');
 
@@ -84,7 +84,7 @@
 		</div>
 
 		<div id="site-slogan" class="site-slogan">
-			<a>Department of Mathematics, Fordham  University</a>
+			<a>Department of Mathematics, Lafayette College</a>
 		</div>
 	</div>
 
@@ -92,13 +92,14 @@
 		<a class="selected">Home</a>&nbsp;&nbsp;
                 <a href="Teaching.html">Teaching</a>&nbsp;&nbsp;
                 <a href="Research.html">Research</a>&nbsp;&nbsp;	
- <a href="Activities.html">Activities</a>&nbsp;&nbsp;  
+ <a href="Activities">Activities</a>&nbsp;&nbsp;  
                 <a href="Resources.html">Resources</a>&nbsp;&nbsp;
 	</div>	
 <div class="container">
 	<div class="side">
 
-		<img src="https://faculty.fordham.edu/mroy17/manami_roy.jpg" width=200px style="padding-top:5px; padding-bottom:10px; border-radius:0px"/>
+		<img src="manamiroy.github.io
+/manami_roy1.jpg" width=200px style="padding-top:5px; padding-bottom:10px; border-radius:0px"/>
 
 	
 
