--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
 <div class="container">
 	<div class="side">
 
-		<img src="manamiroy.github.io
-/manami_roy1.jpg" width=200px style="padding-top:5px; padding-bottom:10px; border-radius:0px"/>
+		<img src="manamiroy.github.io/manami_roy1.jpg" width=200px style="padding-top:5px; padding-bottom:10px; border-radius:0px"/>
 
 	
 
