--- a/index.html
+++ b/index.html
@@ -101,26 +101,18 @@
                <div id="contact">
 			<strong>Address:</strong><br>
 			Department of Mathematics <br>
-			Fordham University <br>441 E Fordham Rd,
-			<br>
-			Bronx, NY 10458<br>
-			<strong>Office:</strong> JMH 414<br>
-		        <strong>Email:</strong> <a style="color:#a30606; text-decoration:none; ">mroy17@fordham.edu</a>
+			Lafayette College <br>
+			Easton, PA 18042<br>
+			<strong>Office:</strong> Pardee 204<br>
+		        <strong>Email:</strong> <a style="color:#a30606; text-decoration:none; ">royma@lafayette.edu</a>
 		</div>
 	
 	</div>
 
 	<div class="content">
-<p>Hello there! I am a Peter M. Curran Visiting Assistant Professor in the<a href="https://www.fordham.edu/info/20595/mathematics"> Department of Mathematics</a> at the <a href="https://www.fordham.edu">Fordham University</a>. I work in the area of number theory and arithmetic geometry. Find out more about my research interests and work <a href="Research.html">here</a>. To know more about me, you can look at my <a href="https://faculty.fordham.edu/mroy17/cv-manamiroy.pdf">CV</a>.  In Spring 2023, I am teaching Calculus I.
-
-<br><br>
-I co-organized <a href="https://sites.google.com/view/peopleonlinent/contributed-talks">New Developments in Number Theory</a>, a contributed talk series in number theory. 
-
-<br><br>
-I am also involved in organizing a lunch discussion series, <a href="https://www.andrewkobin.com/lunch-in-the-time-of-covid">Lunch in the Time of COVID</a>, where we discuss some of the issues early-career mathematicians are facing during the pandemic. 
-
-<br><br>
-</div>
+<p>Hello there! I am a Assistant Professor in the<a href="https://math.lafayette.edu/"> Department of Mathematics</a> at the <a href="https://www.lafayette.edu/">Lafayette College</a>. I work in the area of number theory and arithmetic geometry. Find out more about my research interests and work <a href="Research.html">here</a>. To know more about me, you can look at my <a href="https://faculty.fordham.edu/mroy17/cv-manamiroy.pdf">CV</a>.  In Spring 2023, I am teaching Calculus I.
+	
+        </div>
 </div>
 	<div id="footer" class="footer">   
                 <p>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
