--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	</div>
 
 	<div class="content">
-<p>Hello there! I am a Assistant Professor in the<a href="https://math.lafayette.edu/"> Department of Mathematics</a> at the <a href="https://www.lafayette.edu/">Lafayette College</a>. I work in the area of number theory and arithmetic geometry. Find out more about my research interests and work <a href="Research.html">here</a>. To know more about me, you can look at my <a href="https://faculty.fordham.edu/mroy17/cv-manamiroy.pdf">CV</a>.  In Spring 2023, I am teaching Calculus I.
+<p>Hello there! I am a Assistant Professor in the<a href="https://math.lafayette.edu/"> Department of Mathematics</a> at the <a href="https://www.lafayette.edu/">Lafayette College</a>. I work in the area of number theory and arithmetic geometry. Find out more about my research interests and work <a href="Research.html">here</a>. To know more about me, you can look at my <a href="https://faculty.fordham.edu/mroy17/cv-manamiroy.pdf">CV</a>.  In Fall 2023, I am teaching Calculus I.
 	
         </div>
 </div>
