--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 	</div>	
 <div class="container">
 	<div class="side">
-<img src="manamiroy.github.io/manami_roy1.jpg" width=200px style="padding-top:5px; padding-bottom:10px; border-radius:0px"/>
-               <div id="contact">
+		<img src="manamiroy.github.io/manami_roy.jpg" width=200px style="padding-top:10px; padding-bottom:10px; border-radius:0px"/>
+         	<div id="contact">
 			<strong>Address:</strong><br>
 			Department of Mathematics <br>
 			Lafayette College <br>
