--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="description" content="Manami Roy, Fordham University" />
-    <meta name="keywords" content="manami, roy, mroy, math, Oklahoma, Fordham, University, OU,  Number theory, Automorphic forms, elliptic curves" />
+    <meta name="description" content="Manami Roy, Lafayette College" />
+    <meta name="keywords" content="manami, roy, mroy, math, Oklahoma, Fordham, University, OU, Lafayette, Number theory, Automorphic forms, elliptic curves" />
     <meta name="author" content="Manami Roy" />
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
     <title>Manami Roy, Lafayette College, Mathematics</title>
