--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@
 
 	<div id="nav" class="nav">
 		<a class="selected">Home</a>&nbsp;&nbsp;
-                <a href="Teaching.html">Teaching</a>&nbsp;&nbsp;
-                <a href="Research.html">Research</a>&nbsp;&nbsp;	
- <a href="Activities">Activities</a>&nbsp;&nbsp;  
-                <a href="Resources.html">Resources</a>&nbsp;&nbsp;
+                <a href="./Teaching">Teaching</a>&nbsp;&nbsp;
+                <a href="./Research">Research</a>&nbsp;&nbsp;	
+ <a href="./Activities">Activities</a>&nbsp;&nbsp;  
+                <a href="./Resources">Resources</a>&nbsp;&nbsp;
 	</div>	
 <div class="container">
 	<div class="side">
@@ -110,16 +110,16 @@
 	</div>
 
 	<div class="content">
-<p>Hello there! I am a Assistant Professor in the<a href="https://math.lafayette.edu/"> Department of Mathematics</a> at the <a href="https://www.lafayette.edu/">Lafayette College</a>. I work in the area of number theory and arithmetic geometry. Find out more about my research interests and work <a href="Research.html">here</a>. To know more about me, you can look at my <a href="https://faculty.fordham.edu/mroy17/cv-manamiroy.pdf">CV</a>.  In Fall 2023, I am teaching Calculus I.
+<p>Hello there! I am a Assistant Professor in the<a href="https://math.lafayette.edu/"> Department of Mathematics</a> at the <a href="https://www.lafayette.edu/">Lafayette College</a>. I work in the area of number theory and arithmetic geometry. Find out more about my research interests and work <a href="./Research">here</a>. To know more about me, you can look at my <a href="https://faculty.fordham.edu/mroy17/cv-manamiroy.pdf">CV</a>.  In Fall 2023, I am teaching Calculus I.
 	
         </div>
 </div>
 	<div id="footer" class="footer">   
                 <p>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<b><font size="3"><a href="Resources.html">Resources</a></font>
+<b><font size="3"><a href="./Resources">Resources</a></font>
 </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
-<b><font size="3"><a href="Activities.html">Activities</a></font>
-</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="Research.html">Research</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="Teaching.html">Teaching</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"><b><b><font size="3">Home<b></font></b></a> </p>
+<b><font size="3"><a href="./Activities">Activities</a></font>
+</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="./Research">Research</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="./Teaching">Teaching</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"><b><b><font size="3">Home<b></font></b></a> </p>
         </div>
 
 </body>
