--- a/Teaching.html
+++ b/Teaching.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="description" content="Manami Roy, University of Oklahoma" />
+    <meta name="description" content="Manami Roy, Lafayette College" />
     <meta name="keywords" content="Manami, Roy, math, University, Oklahoma, Number theory, Automorphic forms, elliptic curves" />
     <meta name="author" content="Manami Roy" />
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
@@ -77,7 +77,7 @@
 		</div>
 
 		<div id="site-slogan" class="site-slogan">
-			<a>Department of Mathematics, Fordham University</a>
+			<a>Department of Mathematics, Lafayette College</a>
 		</div>
 	</div>
 
@@ -93,8 +93,8 @@
 <div class="container">	
 <div class="content">
 
-In Spring 2023, I am teaching Calculus I (Math 1206-R03 and Math 1206-R04). 
-<br> All the course materials are available on respective Blackboard course pages.
+In Fall 2023, I am teaching Calculus I (Math 161-08 and Math 161-10). 
+<br> All the course materials are available on respective Moodle course pages.
 
 <h3>Past Teaching Experience:</h3>
 <h4><u>At Fordham University:</u></h4>
@@ -102,6 +102,12 @@ In Spring 2023, I am teaching Calculus I (Math 1206-R03 and Math 1206-R04).
 <tr>
 <td width="10%"><b>Semester</b></td>
 <td width="30%"><b>Course Name</b></td>
+</tr>
+<tr>
+<td> Spring 2023 </td>
+<td>Calculus I </td>
+</tr>
+<br>
 </tr>
 <tr>
 <td> Fall 2022 </td>
