--- a/Research.html
+++ b/Research.html
@@ -1,8 +1,8 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="description" content="Manami Roy, University of Oklahoma" />
-    <meta name="keywords" content="Manami, Roy, math, University, Oklahoma, Number theory, Automorphic forms, elliptic curves" />
+    <meta name="description" content="Manami Roy, Lafayette College" />
+    <meta name="keywords" content="Manami, Roy, math, University, Oklahoma, Number theory, Lafayette, Automorphic forms, elliptic curves" />
     <meta name="author" content="Manami Roy" />
 <meta content='width=device-width, initial-scale=1' name='viewport'/>
     <title>Research</title>
@@ -77,7 +77,7 @@
 		</div>
 
 		<div id="site-slogan" class="site-slogan">
-			<a>Department of Mathematics, Fordham University</a>
+			<a>Department of Mathematics, Lafayette College</a>
 		</div>
 	</div>
 
