--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 	<div id="wrap" class="wrap">
 		<div id="site-name" class="site-name">
-			<a href="index.html">Manami Roy</a>(She/Her/Hers)
+			<a href="index.html">Manami Roy</a>
 			
 		</div>
 
