--- a/Research.html
+++ b/Research.html
@@ -162,8 +162,8 @@ For some of my work in this direction, see the articles <a href="https://arxiv.o
 
      </li>
 <br>
-  <li><b><a href="https://arxiv.org/abs/2207.02747">Dimension formulas for Siegel modular forms of level 4</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://people.math.sc.edu/shaoyun/">Shaoyun Yi</a>, and with an appendix "Modular forms of Klingen level 4 and small weight" by Cris Poor and David Yuen).
-      <br>Preprint, 2022, (Submitted).
+  <li><b><a href="https://arxiv.org/abs/2207.02747">Dimension formulas for Siegel modular forms of level 4</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://shaoyunyi.gitee.io/shaoyun/">Shaoyun Yi</a>, and with an appendix "Modular forms of Klingen level 4 and small weight" by Cris Poor and David Yuen).
+      <br> Mathematika 69 (2023), no. 3, 795-840. <a href="https://doi.org/10.1112/mtk.12207"> DOI</a>.
         </li>
 <br>
  <li><b>Prime isogenous discriminant twins over number fields</b> (with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Alyson Deines, Maila Hallare, and Piper H)
@@ -171,10 +171,10 @@ For some of my work in this direction, see the articles <a href="https://arxiv.o
         </li>
 <br>
   <li><b><a href="https://arxiv.org/abs/2202.13253">Generalized Ramanujan-Sato Series Arising from Modular Forms</a></b> (with <a href="https://angelicababei.com/">Angelica Babei</a> , <a href="https://sites.google.com/view/lea-beneish/home">Lea Beneish </a>, <a href="https://sites.google.com/view/hollyswisher/home">Holly Swisher</a>, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="">Fang-Ting Tu</a>)
-      <br>Preprint, 2022, (Submitted).
+      <br> to appear in Research Directions in Number Theory: Women in Numbers V, 2023.
         </li>
 <br>
-  <li><b><a href="https://arxiv.org/abs/2109.07649">Classical and adelic Eisenstein series</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://people.math.sc.edu/shaoyun/">Shaoyun Yi</a>).
+  <li><b><a href="https://arxiv.org/abs/2109.07649">Classical and adelic Eisenstein series</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://shaoyunyi.gitee.io/shaoyun/">Shaoyun Yi</a>).
       <br>Preprint, 2021, (Submitted).
         </li>
 <br>
@@ -190,11 +190,11 @@ For some of my work in this direction, see the articles <a href="https://arxiv.o
       <br>Pacific Journal of Mathematics <b>318</b> (2022), No.1,1-42, <a href="https://doi.org/10.2140/pjm.2022.318.1"> DOI</a>. 
         </li>
 <br>
-  <li><b><a href="https://arxiv.org/abs/2104.09710">Congruences for dimensions of spaces of Siegel cusp forms and 4-core partitions</a></b> (with <a href="https://www.researchgate.net/profile/Chiranjit-Ray">Chiranjit Ray</a> and <a href="https://people.math.sc.edu/shaoyun/">Shaoyun Yi</a>).
+  <li><b><a href="https://arxiv.org/abs/2104.09710">Congruences for dimensions of spaces of Siegel cusp forms and 4-core partitions</a></b> (with <a href="https://www.researchgate.net/profile/Chiranjit-Ray">Chiranjit Ray</a> and <a href="https://shaoyunyi.gitee.io/shaoyun/">Shaoyun Yi</a>).
       <br>The Ramanujan Journal <b>58</b> (2022), 1011-1023, <a href="https://doi.org/10.1007/s11139-021-00481-0"> DOI</a>. 
         </li>
 <br>
-   <li><b><a href="https://arxiv.org/abs/2010.09996">On counting cuspidal automorphic representations for GSp(4)</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://people.math.sc.edu/shaoyun/">Shaoyun Yi</a>).
+   <li><b><a href="https://arxiv.org/abs/2010.09996">On counting cuspidal automorphic representations for GSp(4)</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://shaoyunyi.gitee.io/shaoyun/">Shaoyun Yi</a>).
       <br>Forum Mathematicum <b>33</b> (2021), no. 3, 821-843, <a href="https://www.degruyter.com/document/doi/10.1515/forum-2020-0313/html"> DOI</a>.
         </li>
   <br>
