--- a/Research.html
+++ b/Research.html
@@ -162,16 +162,15 @@ For some of my work in this direction, see the articles <a href="https://arxiv.o
 
      </li>
 <br>
-  <li><b><a href="https://arxiv.org/abs/2207.02747">Dimension formulas for Siegel modular forms of level 4</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://shaoyunyi.gitee.io/shaoyun/">Shaoyun Yi</a>, and with an appendix "Modular forms of Klingen level 4 and small weight" by Cris Poor and David Yuen).
-      <br> Mathematika 69 (2023), no. 3, 795-840. <a href="https://doi.org/10.1112/mtk.12207"> DOI</a>.
+  <li><b><a href="https://arxiv.org/abs/2207.02747">Dimension formulas for Siegel modular forms of level 4</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://shaoyunyi.gitee.io/shaoyun/">Shaoyun Yi</a>, and with an appendix "Modular forms of Klingen level 4 and small weight" by Cris Poor and David Yuen),
+      Mathematika 69 (2023), no. 3, 795-840, <a href="https://doi.org/10.1112/mtk.12207"> DOI</a>.
         </li>
 <br>
  <li><b>Prime isogenous discriminant twins over number fields</b> (with <a href="https://sites.google.com/site/barriosalex/">Alexander J. Barrios</a>, Alyson Deines, Maila Hallare, and Piper H)
       <br>Preprint (available on request), 2022.
         </li>
 <br>
-  <li><b><a href="https://arxiv.org/abs/2202.13253">Generalized Ramanujan-Sato Series Arising from Modular Forms</a></b> (with <a href="https://angelicababei.com/">Angelica Babei</a> , <a href="https://sites.google.com/view/lea-beneish/home">Lea Beneish </a>, <a href="https://sites.google.com/view/hollyswisher/home">Holly Swisher</a>, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="">Fang-Ting Tu</a>)
-      <br> to appear in Research Directions in Number Theory: Women in Numbers V, 2023.
+  <li><b><a href="https://arxiv.org/abs/2202.13253">Generalized Ramanujan-Sato Series Arising from Modular Forms</a></b> (with <a href="https://angelicababei.com/">Angelica Babei</a> , <a href="https://sites.google.com/view/lea-beneish/home">Lea Beneish </a>, <a href="https://sites.google.com/view/hollyswisher/home">Holly Swisher</a>, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="">Fang-Ting Tu</a>), to appear in Research Directions in Number Theory: Women in Numbers V, 2023.
         </li>
 <br>
   <li><b><a href="https://arxiv.org/abs/2109.07649">Classical and adelic Eisenstein series</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://shaoyunyi.gitee.io/shaoyun/">Shaoyun Yi</a>).
