--- a/Activities.html
+++ b/Activities.html
@@ -121,26 +121,31 @@ co-organizing "Panel on Fostering Good Collaborations" with Alexander Barrios an
  <b><a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_program_ss35.html#title"> AMS Special Session on Rethinking Number Theory,</a> </b> JMM 2023, Jan 4, 2023 
 </li> 
 <br>
-<li> 
- <b><a href="http://www.math.columbia.edu/~goldfeld/ScheduleJointNTS39.html"> Joint COLUMBIA-CUNY-NYU Number Theory Seminar,</a> </b> Dec 1, 2022
-</li> 
-<br>
-<li> 
- <b><a href=https://researchseminars.org/seminar/UBC_NTS"> UBC Number Theory Seminar (online),</a> </b> Oct 19, 2022
-</li>
-<br> 
-<li> 
-Mathematics Colloquium, Ashoka University, India,  Sep 13, 2022
-</li> 
-<br>
-<li> 
-Stat-Math Unit Seminar, ISI Delhi, India, Sep 7, 2022
-</li> 
 
          </ul>
 <br>
 	<h3>Selected older talks:</h3>
 	<ul>
+		<li> 
+<b><a href="http://www.math.columbia.edu/~goldfeld/ScheduleJointNTS39.html"> Joint COLUMBIA-CUNY-NYU Number Theory Seminar,</a> </b> Dec 1, 2022,
+<br>Relationship between counting cuspidal automorphic representations of GSp(4) and dimensions of Siegel cusp forms.
+</li> 
+<br>
+<li> 	
+ <b><a href=https://researchseminars.org/seminar/UBC_NTS"> UBC Number Theory Seminar (online),</a> </b> Oct 19, 2022,
+ <br> Dimensions of spaces of Siegel cusp forms of degree 2.	
+</li>
+<br> 
+<li> 
+Mathematics Colloquium, Ashoka University, India,  Sep 13, 2022,
+<br> Dimensions of spaces of Siegel cusp forms of degree 2.
+</li> 
+<br>
+<li> 
+Stat-Math Unit Seminar, ISI Delhi, India, Sep 7, 2022,
+<br> Dimensions of spaces of Siegel cusp forms of degree 2.	
+</li> 
+<br>
 		<li> 
 <b>Dimensions for the spaces of Siegel cusp forms of degree 2 and level 4, </b> May 15, 2022
 <br>
