--- a/Activities.html
+++ b/Activities.html
@@ -132,113 +132,98 @@ co-organizing "Panel on Fostering Good Collaborations" with Alexander Barrios an
 </li> 
 <br>
 <li> 	
- <b><a href=https://researchseminars.org/seminar/UBC_NTS"> UBC Number Theory Seminar (online),</a> </b> Oct 19, 2022,
- <br> Dimensions of spaces of Siegel cusp forms of degree 2.	
+ <b><a href=https://researchseminars.org/seminar/UBC_NTS"> UBC Number Theory Seminar (online),</a> </b> 
+ <br> Dimensions of spaces of Siegel cusp forms of degree 2, Oct 19, 2022.	
 </li>
 <br> 
 <li> 
-Mathematics Colloquium, Ashoka University, India,  Sep 13, 2022,
-<br> Dimensions of spaces of Siegel cusp forms of degree 2.
+<b> Mathematics Colloquium, Ashoka University </b>, India,
+<br> Dimensions of spaces of Siegel cusp forms of degree 2, Sep 13, 2022.
 </li> 
 <br>
 <li> 
-Stat-Math Unit Seminar, ISI Delhi, India, Sep 7, 2022,
-<br> Dimensions of spaces of Siegel cusp forms of degree 2.	
-</li> 
-<br>
-		<li> 
-<b>Dimensions for the spaces of Siegel cusp forms of degree 2 and level 4, </b> May 15, 2022
-<br>
-<b><a href="https://meetings.ams.org/math/spring2022w/meetingapp.cgi">AMS Special Session on Recent Advances on the Langlands Program.</a> </b> 
+<b> Stat-Math Unit Seminar, ISI Delhi,</b> India,
+<br> Dimensions of spaces of Siegel cusp forms of degree 2, Sep 7, 2022.	
 </li> 
 <br>
 <li> 
-<b>Dimensions for the spaces of Siegel cusp forms of Klingen level 4, </b> April 12, 2022
+<b><a href="https://meetings.ams.org/math/spring2022w/meetingapp.cgi">AMS Special Session on Recent Advances on the Langlands Program </a> </b>(Invited talk)
+<br> Dimensions for the spaces of Siegel cusp forms of degree 2 and level 4, May 15, 2022.
+</li> 
 <br>
+<li> 
 <b><a href="https://researchseminars.org/seminar/ExplicitModularity"> Explicit Methods for Modularity</a>, ICERM / MIT </b> (Invited talk).
-        </li>
+<br> Dimensions for the spaces of Siegel cusp forms of Klingen level 4, April 12, 2022 
+</li>
 <br>
  <li> 
+<b><a href=https://www.jointmathematicsmeetings.org/meetings/national/jmm2022/2268_program_ss26.html#title> AMS Special Session on A Showcase of Number Theory at Undergraduate Institutions</a>, Joint Mathematics Meetings 2022 </b>(Invited talk)
+   <br>  
 <b>The functional equation for completed standard
-L-function of modular forms on G_2, </b> April 7, 2022
-<br>
-<b><a href=https://www.jointmathematicsmeetings.org/meetings/national/jmm2022/2268_program_ss26.html#title> AMS Special Session on A Showcase of Number Theory at Undergraduate Institutions</a>, Joint Mathematics Meetings 2022</b> (Invited talk).
-        </li>
+L-function of modular forms on G_2, </b> April 7, 2022.
+   </li>
 <br>
 <li> 
-<b>Tamagawa numbers for rational elliptic curves with
-non-trivial torsion, </b> April 6, 2022
-<br>
-<b><a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2022/2268_program_ss97.html#title"> AMS Special Session on Rethinking Number Theory</a>, Joint Mathematics Meetings 2022 </b>
-        </li>
+<b><a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2022/2268_program_ss97.html#title"> AMS Special Session on Rethinking Number Theory</a>, Joint Mathematics Meetings 2022</b>
+<br> Tamagawa numbers for rational elliptic curves with
+non-trivial torsion, April 6, 2022.
+</li>
 <br>
  <li> 
-<b>Dimensions for the spaces of Siegel cusp forms of level 4, </b> December 7, 2021
-<br>
 <b><a href=https://www2.mathematik.tu-darmstadt.de/~international_seminar/> International Seminar on
-Automorphic Forms</a></b> (Invited talk).
+Automorphic Forms</a></b> (Invited talk)
+<br>Dimensions for the spaces of Siegel cusp forms of level 4, December 7, 2021.
     </li>
 <br>
  <li> 
-<b>Counting cuspidal automorphic representations of GSp(4) and dimensions of Siegel cusp forms, </b> November 17, 2021
-<br>
-<b><a href=https://math.jhu.edu/~aiyenga5/seminar.php> Johns Hopkins Number Theory Seminar</a></b> (Invited talk).
-    </li>
+<b><a href=https://math.jhu.edu/~aiyenga5/seminar.php> Johns Hopkins Number Theory Seminar</a></b> (Invited talk)
+ <br>Counting cuspidal automorphic representations of GSp(4) and dimensions of Siegel cusp forms, November 17, 2021.
+ </li>
 <br>
    <li> 
-<b>Congruences for dimensions of spaces of Siegel cusp forms and 4-core partitions, </b> November 2, 2021
-<br>
-<b><a href=https://math.oregonstate.edu/numbertheory_seminar> Oregon State University Number Theory Seminar</a></b> (Invited talk).
+<b><a href=https://math.oregonstate.edu/numbertheory_seminar> Oregon State University Number Theory Seminar</a></b> (Invited talk)
         </li>
-<br>
+<br>Congruences for dimensions of spaces of Siegel cusp forms and 4-core partitions, November 2, 2021.
   <li> 
-<b>Tamagawa numbers and torsion for rational elliptic curves, </b> October 23, 2021
-<br>
 <b><a href=http://www.math.union.edu/~hatleyj/Upstate2021/Upstate2021.html> 
 Upstate Number Theory Conference </a></b>
+<br>Tamagawa numbers and torsion for rational elliptic curves, October 23, 2021.	  
         </li>
 <br>
  <li> 
- <b>Rational elliptic curves with non-trivial torsion</b>, September 26, 2021
-<br>
 <b><a href=https://www.math.clemson.edu/numbertheory/pajamas-iii/>PAJAMAS III</a></b> 
-        </li>
+  <br>Rational elliptic curves with non-trivial torsion, September 26, 2021.  
+ </li>
 <br>
  <li> 
- <b>Local data for rational elliptic curves with non-trivial torsion</b>, October 3, 2021
-<br>
 <b><a href=https://archimede.mat.ulaval.ca/QUEBEC-MAINE/>Maine-Québec Number Theory Conference</a></b> 
-        </li>
+  <br>Local data for rational elliptic curves with non-trivial torsion, October 3, 2021.
+ </li>
 <br>
    <li> 
- <b>Elliptic curves and modularity</b>, July 30, 2021
-<br>
-<b><a href=https://pages.pomona.edu/%7Eehga2017/prime.html>PRiME (Pomona Research in Mathematics Experience)</a></b> (Invited talk).
-        </li>
-<br>
-   <li> 
- <b>Counting cuspidal automorphic representations of GSp(4)</b>, March 12, 2021
-<br>
-<b><a href=https://researchseminars.org/seminar/QMULANTS>Queen Mary University of London Algebra and Number Theory Seminar</a></b> (Invited talk).
-        </li>
+<b><a href=https://pages.pomona.edu/%7Eehga2017/prime.html>PRiME (Pomona Research in Mathematics Experience)</a></b> (Invited talk)
+<br>Elliptic curves and modularity, July 30, 2021 
+</li>
 <br>
    <li> 
- <b>Counting cuspidal automorphic representations of GSp(4) and its application</b>, February 15, 2021 
+<b><a href=https://researchseminars.org/seminar/QMULANTS>Queen Mary University of London Algebra and Number Theory Seminar</a></b> (Invited talk)
+ <br>Counting cuspidal automorphic representations of GSp(4), March 12, 2021.
+</li>
 <br>
+   <li> 
 <b><a href=https://research.math.osu.edu/numbertheory/>The Ohio State University
-Number Theory Seminar</a> </b>(Invited talk).
-        </li>
+Number Theory Seminar</a> </b>(Invited talk)
+<br>Counting cuspidal automorphic representations of GSp(4) and its application, February 15, 2021.
+   </li>
 <br>
    <li> 
- <b>Local data of rational elliptic curves with non-trivial torsion</b>, January 25, 2021
-<br>
-Number Theory, Cryptography, and Coding Theory Seminar, Clemson University (Invited talk).
-        </li>
+<b>Number Theory, Cryptography, and Coding Theory Seminar, Clemson University</b> (Invited talk)
+<br> Local data of rational elliptic curves with non-trivial torsion, January 25, 2021.   
+</li>
 <br> 
 <li> 
- <b>An equidistribution result for cuspidal automorphic representations of GSp(4)</b>, January 22, 2021  
-<br>
- Number Theory Seminar, Queen's University (Invited talk).
+ Number Theory Seminar, Queen's University (Invited talk)
+<br>An equidistribution result for cuspidal automorphic representations of GSp(4), January 22, 2021.  
   </li>
   <br>
    <li> 
