--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	</div>	
 <div class="container">
 	<div class="side">
-		<img src="https://github.com/manamiroy/manamiroy.github.io/blob/342778868db3f68395c184604a7bd8e70103a9fb/manami_roy.jpg" width=200px style="padding-top:10px; padding-bottom:10px; border-radius:0px"/>
+		<img src="images/manamiroy.jpg" width=200px style="padding-top:10px; padding-bottom:10px; border-radius:0px"/>
          	<div id="contact">
 			<strong>Address:</strong><br>
 			Department of Mathematics <br>
