--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 <b><font size="3"><a href="./Resources">Resources</a></font>
 </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
 <b><font size="3"><a href="./Activities">Activities</a></font>
-</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="./Research">Research</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="./Teaching">Teaching</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"><b><b><font size="3">Home<b></font></b></a> </p>
+</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="./Research">Research</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="./Teaching">Teaching</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index"><b><b><font size="3">Home<b></font></b></a> </p>
         </div>
 
 </body>
