--- a/Resources.html
+++ b/Resources.html
@@ -116,7 +116,7 @@
     <ul>
       <li><a href="http://www.numbertheory.org/ntw/N3.html">Number Theory Conferences</a></li>
    <li><a href="https://researchseminars.org">researchseminars.org</a></li>
-      <li><a href="https://kskedlaya.org/confs.cgi">Kiran S. Kedlaya's Conference Page in Arithmetic Geometry and Number theory</a></li>
+      <li><a href="https://mathweb.ucsd.edu/~kedlaya/cgi-bin/confs.cgi">Kiran S. Kedlaya's Conference Page in Arithmetic Geometry and Number theory</a></li>
       <li><a href="https://mathmeetings.net/ag-nt">Conferences in Arithmetic Geometry, Algebraic Geometry, and Topology </a></li>
       <li><a href="https://www.msri.org/web/msri/scientific/programs">MSRI programs</a></li>
       <li><a href="http://www.ams.org/meetings/meetings">AMS Meetings</a></li>
