--- a/Teaching.html
+++ b/Teaching.html
@@ -93,10 +93,25 @@
 <div class="container">	
 <div class="content">
 
-In Fall 2023, I am teaching Calculus I (Math 161-08 and Math 161-10). 
+In Spring 2024, I am teaching Discrete Structures (MATH182-01 and MATH182-02). 
+
 <br> All the course materials are available on respective Moodle course pages.
 
 <h3>Past Teaching Experience:</h3>
+<h4><u>At Lafayette College:</u></h4>
+<table style="width:80%">
+<tr>
+<td width="20%"><b>Semester</b></td>
+<td width="40%"><b>Course Name</b></td>
+</tr>
+<tr>
+<td> Fall 2023 </td>
+<td>Calculus I </td>
+</tr>
+<br>
+</tr>
+
+
 <h4><u>At Fordham University:</u></h4>
 <table style="width:80%">
 <tr>
