--- a/Research.html
+++ b/Research.html
@@ -96,61 +96,32 @@
 My research interest lies at the intersection of number theory and arithmetic geometry. On the
 one hand, on the number theory side, I work on <i>local-global representation theory</i>, <i>automorphic
 forms</i>, and <i>classical modular forms </i>; on the other hand, I pursue various projects on <i>elliptic curves
-over global and local fields</i> on the arithmetic geometry side. 
+over global and local fields</i> on the arithmetic geometry side. Another part of my research focuses on exploring the connection between number theory and arithmetic geometry using <i>L-functions</i> and
+<i>Galois representations</i>, which broadly comes under the <i>Langlands Program</i>. Recently, I am also working on a few projects in computational number theory. 
 <br>
-Another part of my research focuses on exploring the connection between number theory and arithmetic geometry using <i>L-functions</i> and
-<i>Galois representations</i>, which broadly comes under the <i>Langlands Program</i>. Recently, I am also working on a few projects in computational number theory. My recent and ongoing research are in the following three categories:
+<br>
+
 <ul>
- <li> <b>Classical modular forms and automorphic forms.</b> I am interested in the following questions in this area:</li> 
+ <li> 
+<b>On classical modular forms and automorphic forms.</b>
+ </li> 
 <br>
-<ul>
-<li>
-Can we find the automorphic representations associated with classical modular forms explicitly?
-</li>
- <li>
-How to obtain the nice properties (e.g., meromorphic continuation, functional equations, special values) for L-functions of automorphic representations?
-</li>
-<li>
-How to count a certain set of cuspidal automorphic representations using their relationship with classical modular forms?
-</li>
-<li>
-How to compute the dimension of spaces of classical modular forms and Siegel modular forms?
-</li>
-</ul><br>
-In the papers <a href="https://arxiv.org/abs/2207.02747">1</a>,<a href="https://arxiv.org/abs/2109.07649">4</a>, <a href="https://arxiv.org/abs/2104.09448">5</a>, <a href="https://arxiv.org/abs/2104.09710">8</a>, <a href="https://arxiv.org/abs/2010.09996">9</a> listed below, I deal with some of the above questions for special cases.
+See the articles <a href="https://arxiv.org/abs/2401.15277v1">1</a>
+	<a href="https://arxiv.org/abs/2207.02747">2</a>, <a href="https://arxiv.org/abs/2202.13253">4</a>,
+	<a href="https://arxiv.org/abs/2109.07649">5</a>, <a href="https://arxiv.org/abs/2104.09448">6</a>, <a href="https://arxiv.org/abs/2104.09710">9</a>,<a href="https://arxiv.org/abs/2010.09996">10</a> listed below.
 <br><br>
- <li> <b>Elliptic curves over number fields and local fields.</b> In the context of the arithmetic of elliptic curves, I am currently working on the following questions:</li>
+ <li> 
+ 	<b>On elliptic curves over number fields and local fields.</b> </li>
 <br>
-  <ul>
- <li>
-How does the local data (Kodaira-Néron types, local Tamagawa numbers, conductor exponent) at each prime change for rational elliptic curves with non-trivial torsion (or non-trivial isogeny)? 
-</li>
-<li>
-Can we classify all rational elliptic curves with a specific global Tamagawa number? 
-</li>
-<li>
-Can we classify all the elliptic curves over number fields with the same discriminants and conductors? 
-</li>
-<li>
-What is the density of rational elliptic curves with non-trivial torsion with specified local data in the set of rational elliptic curves with non-trivial torsion? 
-</li>
-</ul>
-<br>
-The papers 2, <a href="https://arxiv.org/abs/2104.10337">7</a> listed below addresses some of the above questions.
+See the articles 3 and <a href="https://arxiv.org/abs/2104.10337">8</a> listed below. 
+
 <br><br>
- <li> <b>Connection between number theory and arithmetic geometry.</b> The Langlands program predicts that to each arithmetic geometry object one can associate an automorphic representation of an appropriate group such that their L-functions are the same. My research focuses on better understanding this connection for some specific cases; specifically, I am considering the following questions: 
+ <li> 
+ 	<b>Connection between number theory and arithmetic geometry.</b>  
 </li>
 <br>
- <ul>
- <li>
-Can we classify automorphic representations attached to elliptic curves over number fields in terms of their Weierstrass coefficients? 
-</li>
-<li>	
-What kind of automorphic objects do we get for a specific lifting from abelian varieties?
-</li>
-</ul>
-<br>
-For some of my work in this direction, see the articles <a href="https://arxiv.org/abs/2106.15722">6</a>, <a href="https://arxiv.org/abs/1901.02115">10</a>, <a href="https://faculty.fordham.edu/mroy17/Level_of_Smf_via_sym3-BB3 article.pdf">12</a> below.
+ 
+See the articles <a href="https://arxiv.org/abs/2106.15722">7</a>, <a href="https://arxiv.org/abs/1901.02115">11</a>, <a href="https://faculty.fordham.edu/mroy17/Level_of_Smf_via_sym3-BB3 article.pdf">13</a> below.
 </ul>
 	</div>
 	<div class="block">
@@ -159,8 +130,11 @@ For some of my work in this direction, see the articles <a href="https://arxiv.o
 (The versions below might differ slightly from their published counterparts.)
 
 <ol>
+	 <li><b><a href="https://arxiv.org/abs/2401.15277v1">The quaternionic Maass Spezialschar on split SO(8)</a></b> (with <a href="https://webpages.uidaho.edu/johnsonleung/">Jennifer Johnson-Leung</a>, <a href="https://mathweb.ucsd.edu/~fmcglade/">Finn McGlade</a>, <a href="https://sites.google.com/view/isabella-negrini/home-page">Isabella Negrini</a> and
+	 	<a href="https://www.math.ucsd.edu/~apollack/">Aaron Pollack</a>).
+      <br>Preprint, 2024, (Submitted).
+        </li>
 
-     </li>
 <br>
   <li><b><a href="https://arxiv.org/abs/2207.02747">Dimension formulas for Siegel modular forms of level 4</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://shaoyunyi.gitee.io/shaoyun/">Shaoyun Yi</a>, and with an appendix "Modular forms of Klingen level 4 and small weight" by Cris Poor and David Yuen),
       Mathematika <b>69</b> (2023), no. 3, 795-840, <a href="https://doi.org/10.1112/mtk.12207"> DOI</a>.
