--- a/Teaching.html
+++ b/Teaching.html
@@ -108,10 +108,7 @@ In Spring 2024, I am teaching Discrete Structures (MATH182-01 and MATH182-02).
 <td> Fall 2023 </td>
 <td>Calculus I </td>
 </tr>
-<br>
-</tr>
-
-
+</table>
 <h4><u>At Fordham University:</u></h4>
 <table style="width:80%">
 <tr>
