--- a/Research.html
+++ b/Research.html
@@ -106,7 +106,7 @@ over global and local fields</i> on the arithmetic geometry side. Another part o
 <b>On classical modular forms and automorphic forms.</b>
  </li> 
 <br>
-See the articles <a href="https://arxiv.org/abs/2401.15277v1">1</a>
+See the articles <a href="https://arxiv.org/abs/2401.15277v1">1</a>,
 	<a href="https://arxiv.org/abs/2207.02747">2</a>, <a href="https://arxiv.org/abs/2202.13253">4</a>,
 	<a href="https://arxiv.org/abs/2109.07649">5</a>, <a href="https://arxiv.org/abs/2104.09448">6</a>, <a href="https://arxiv.org/abs/2104.09710">9</a>,<a href="https://arxiv.org/abs/2010.09996">10</a> listed below.
 <br><br>
