--- a/Activities.html
+++ b/Activities.html
@@ -110,9 +110,14 @@ co-lead of a project on "Isogenous Discriminant Twins over Number Fields" with A
 co-organizing "Panel on Fostering Good Collaborations" with Alexander Barrios and Bella Tobin.
 </li> 
    </ul>
-	<h3> Recent talks:</h3>
+	<h3> Upcoming talks:</h3>
 	<ul>
-<li> 
+
+         </ul>
+<br>
+	<h3>Selected talks:</h3>
+	<ul>
+    <li> 
 <b><a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_program_ss85.html#title">AMS Special Session on Number theory at non-PhD granting institutions,</a> </b> JMM 2023, Jan 5, 2023
 <br>
 </li> 
@@ -120,12 +125,6 @@ co-organizing "Panel on Fostering Good Collaborations" with Alexander Barrios an
 <li> 
  <b><a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_program_ss35.html#title"> AMS Special Session on Rethinking Number Theory,</a> </b> JMM 2023, Jan 4, 2023 
 </li> 
-<br>
-
-         </ul>
-<br>
-	<h3>Selected older talks:</h3>
-	<ul>
 		<li> 
 <b><a href="http://www.math.columbia.edu/~goldfeld/ScheduleJointNTS39.html"> Joint COLUMBIA-CUNY-NYU Number Theory Seminar,</a> </b> Dec 1, 2022,
 <br>Relationship between counting cuspidal automorphic representations of GSp(4) and dimensions of Siegel cusp forms.
