Added a new page

--- a/Resources.html
+++ b/Resources.html
@@ -85,6 +85,7 @@
 	        <a href="index.html">Home</a>&nbsp;&nbsp;
                 <a href="Teaching.html">Teaching</a>&nbsp;&nbsp;
                 <a href="Research.html">Research</a>&nbsp;&nbsp;
+                <a href="Talks.html">Talks</a>&nbsp;&nbsp; 
  <a href="Activities.html">Activities</a>&nbsp;&nbsp;  
 	<a class="selected">Resources</a>&nbsp;&nbsp;		          
         </div>	
@@ -145,8 +146,8 @@
 </div>
 	<div id="footer" class="footer">   
                 <p>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<b><font size="3"><a href="Resources.html">Resources</a></font>
-</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
+<b><font size="3"><a href="Resources.html">Resources</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<b><font size="3"><a href="Talks.html">Talks</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <b><font size="3"><a href="Activities.html">Activities</a></font>
 </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="Research.html">Research</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="Teaching.html">Teaching</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"><b><b><font size="3">Home<b></font></b></a> </p>
         </div>
