--- a/Teaching.html
+++ b/Teaching.html
@@ -84,21 +84,20 @@
 	<div id="nav" class="nav">
 		<a href="index.html">Home</a>&nbsp;&nbsp;
                 <a class="selected">Teaching</a>&nbsp;&nbsp;	
-	        <a href="Research.html">Research</a>&nbsp;&nbsp;  
+	        <a href="Research.html">Research</a>&nbsp;&nbsp; 
+	        <a href="Talks.html">Talks</a>&nbsp;&nbsp; 
  <a href="Activities.html">Activities</a>&nbsp;&nbsp;  
 	        <a href="Resources.html">Resources</a>&nbsp;&nbsp;  
        
-        </div>
+    </div>
 	
 <div class="container">	
 <div class="content">
 
-In Spring 2024, I am teaching Discrete Structures (MATH182-01 and MATH182-02). 
-
-<br> All the course materials are available on respective Moodle course pages.
+In Spring 2024, I am teaching Discrete Structures (MATH182-01 and MATH182-02). All the course materials are available on respective Moodle course pages.
 
 <h3>Past Teaching Experience:</h3>
-<h4><u>At Lafayette College:</u></h4>
+<h4><u>Lafayette College:</u></h4>
 <table style="width:80%">
 <tr>
 <td width="20%"><b>Semester</b></td>
@@ -109,7 +108,7 @@ In Spring 2024, I am teaching Discrete Structures (MATH182-01 and MATH182-02).
 <td>Calculus I </td>
 </tr>
 </table>
-<h4><u>At Fordham University:</u></h4>
+<h4><u>Fordham University:</u></h4>
 <table style="width:80%">
 <tr>
 <td width="20%"><b>Semester</b></td>
@@ -119,28 +118,23 @@ In Spring 2024, I am teaching Discrete Structures (MATH182-01 and MATH182-02).
 <td> Spring 2023 </td>
 <td>Calculus I </td>
 </tr>
-<br>
 </tr>
 <tr>
 <td> Fall 2022 </td>
 <td>Calculus I </td>
 </tr>
-<br>
 <tr>
 <td>  </td>
 <td>Math for Business: Finite</td>
 </tr>
-<br>
 <tr>
 <td> Summer 2022 </td>
 <td>Finite Mathematics</td>
 </tr>
-<br>
 <tr>
 <td> Spring 2022 </td>
 <td>Linear Algebra I </td>
 </tr>
-<br>
 <tr>
 <td> </td>
 <td>Finite Mathematics</td>
@@ -149,7 +143,6 @@ In Spring 2024, I am teaching Discrete Structures (MATH182-01 and MATH182-02).
 <td> Fall 2021 </td>
 <td>Abstract Algebra I </td>
 </tr>
-<br>
 <tr>
 <td>  </td>
 <td>Calculus I (two sections)</td>
@@ -162,9 +155,8 @@ In Spring 2024, I am teaching Discrete Structures (MATH182-01 and MATH182-02).
 <td> Fall 2020 </td>
 <td><a href="math3005.html">Abstract Algebra I </a></td>
 </tr>
-<br>
 <tr>
-<td>  </td>
+<td> </td>
 <td><a href="math1108.html">Math for Business: Finite (two sections)</a></td>
 </tr>
 <tr>
@@ -180,6 +172,7 @@ In Spring 2024, I am teaching Discrete Structures (MATH182-01 and MATH182-02).
 <td>Calculus II</td>
 </tr>
 </table>
+
 <h4><u>At University of Oklahoma:</u></h4>
 <table style="width:90%">
 <tr>
@@ -203,8 +196,8 @@ In Spring 2024, I am teaching Discrete Structures (MATH182-01 and MATH182-02).
 </div>
 	<div id="footer" class="footer">   
                 <p>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<b><font size="3"><a href="Resources.html">Resources</a></font>
-</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
+<b><font size="3"><a href="Resources.html">Resources</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<b><font size="3"><a href="Talks.html">Talks</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <b><font size="3"><a href="Activities.html">Activities</a></font>
 </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="Research.html">Research</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="Teaching.html">Teaching</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"><b><b><font size="3">Home<b></font></b></a> </p>
         </div>
