--- a/Activities.html
+++ b/Activities.html
@@ -90,231 +90,93 @@
 	<div id="nav" class="nav">
 		<a href="index.html">Home</a>&nbsp;&nbsp;
                 <a href="Teaching.html">Teaching</a>&nbsp;&nbsp;	
-	        <a href="Research.html">Research</a>&nbsp;&nbsp;  
+	        <a href="Research.html">Research</a>&nbsp;&nbsp; 
+            <a href="Talks.html">Talks</a>&nbsp;&nbsp;  
  <a class="selected">Activities</a>&nbsp;&nbsp;  
                 <a href="Resources.html">Resources</a>&nbsp;&nbsp;	
         </div>
 <div class="content">
 
-<p>This page contains my other academic activities. Slides of the talks are available upon request.</p>
+<p>This page contains my other academic activities, services and outreach.</p>
         <div class="block">
-<h3> Other activities:</h3>
+
+    <h3>Involvement with Mathematical Projects/Organizations:</h3>         
+
 	<ul>
-<li> <b><a href="https://sites.google.com/view/womeninnumbers6/home">Women in Number Theory 6,</a> </b> March 21-26, 2023
+<li> <a href="https://sites.google.com/view/womeninnumbers6/home">Women in Number Theory 6</a> 
 <br>
-co-lead of a project on "Isogenous Discriminant Twins over Number Fields" with Alyson Deines.
+(co-led of a project with Alyson Deines)
 </li> 
 <br>
-<li>  <b><a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_program_ss35.html#title"> AMS Special Session on Rethinking Number Theory,</a> </b> JMM 2023, Jan 4, 2023 
+<li> <a href="https://sites.google.com/view/rethinkingnumbertheory-2/projects">Rethinking Number Theory 2</a> 
 <br>
-co-organizing "Panel on Fostering Good Collaborations" with Alexander Barrios and Bella Tobin.
+(co-led of a project with Alexander Barrios)
+</li> 
+<br>
+<li><a href="https://www.lmfdb.org"> L-functions and Modular Forms Database (LMFDB)</a>
+    <br>
+(Contributed to <a href="https://www.lmfdb.org/Groups/Abstract/">Abstract Groups</a> and <a href="https://pink.lmfdb.xyz/ModularForm/GSp/Q/">Siegel Modular Forms</a> in LMFDB) 
+
+<br>
+</ul>
+  <h3>Conference/Program Organization:</h3>
+<ul>
+<li> 
+Co-organized <a href="https://sites.google.com/view/peopleonlinent/contributed-talks">New Developments in Number Theory</a>, a contributed talk series in number theory.
+</li>  
+<br>
+<li>  
+Co-organized <a href="https://www.andrewkobin.com/lunch-in-the-time-of-covid">Lunch in the Time of COVID</a>, a panel series on highlight issues affecting early career mathematicians during the pandemic. 
+</li>  
+<br>
+<li> Co-organized 
+   <a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_program_ss70.html#title">AMS Special Session on Women in Automorphic Forms</a>, JMM 2023. 
+
+</li>
+<br>
+<li> Co-organized <a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_program_ss35.html#title"> Panel on Fostering Good Collaborations</a>, AMS Special Session on Rethinking Number Theory, JMM 2023. 
+<br>
 </li> 
    </ul>
-	<h3> Upcoming talks:</h3>
-	<ul>
+     <h3>Research Workshops/Conferences Participation:</h3>
+     <ul>
 
-         </ul>
+<li> <a href="https://aimath.org/pastworkshops/aagaautomorphic.html">AIM Workshop on Analytic, arithmetic, and geometric aspects of automorphic forms</a>, Jan 29 - Feb 2, 2024.
+</li> 
 <br>
-	<h3>Selected talks:</h3>
-	<ul>
-    <li> 
-<b><a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_program_ss85.html#title">AMS Special Session on Number theory at non-PhD granting institutions,</a> </b> JMM 2023, Jan 5, 2023
+<li> <a href="https://icerm.brown.edu/events/sc-23-smf/#workshopschedule">Siegel modular forms in LMFDB</a>, ICERM, Nov 16-19, 2023.
+</li> 
+<br>
+<li>  AIM SQuaRE: Quaternionic modular forms, Aug 21-25, 2023.
+</li> 
+<br>
+<li>  <a href="https://icerm.brown.edu/events/sc-23-lucant/">LMFDB, Computation, and Number Theory (LuCaNT)<a>, July 10-14, 2023.
+</li> 
+<br>
+<li>  <a href="https://legacy.slmath.org/summer_research/379">MSRI/SLMath's Summer Research in Mathematics program </a>, June 11-24, 2023.
+</li> 
+<br>
+<li>   <a href="https://www.ams.org/programs/research-communities/2023MRC-Stacks">MRC 2023: Explicit Computations with Stacks</a>, June 4-10, 2023.
+</li> 
+<br>
+<li>  AIM SQuaRE: Weight three paramodular forms, May 21-27, 2023.
+</li> 
+<br>
+<li> <a href="https://dept.math.lsa.umich.edu/~weiho/win5/">Women in Number Theory 5</a> 
 <br>
 </li> 
 <br>
-<li> 
- <b><a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2023/2270_program_ss35.html#title"> AMS Special Session on Rethinking Number Theory,</a> </b> JMM 2023, Jan 4, 2023 
+<li> <a href="https://sites.google.com/view/rethinkingnumbertheory-1/home?authuser=0">Rethinking Number Theory 1</a> 
+<br>
 </li> 
-<br>
-		<li> 
-<b><a href="http://www.math.columbia.edu/~goldfeld/ScheduleJointNTS39.html"> Joint COLUMBIA-CUNY-NYU Number Theory Seminar,</a> </b> Dec 1, 2022,
-<br>Relationship between counting cuspidal automorphic representations of GSp(4) and dimensions of Siegel cusp forms.
-</li> 
-<br>
-<li> 	
- <b><a href=https://researchseminars.org/seminar/UBC_NTS"> UBC Number Theory Seminar (online),</a> </b> 
- <br> Dimensions of spaces of Siegel cusp forms of degree 2, Oct 19, 2022.	
-</li>
-<br> 
-<li> 
-<b> Mathematics Colloquium, Ashoka University </b>, India,
-<br> Dimensions of spaces of Siegel cusp forms of degree 2, Sep 13, 2022.
-</li> 
-<br>
-<li> 
-<b> Stat-Math Unit Seminar, ISI Delhi,</b> India,
-<br> Dimensions of spaces of Siegel cusp forms of degree 2, Sep 7, 2022.	
-</li> 
-<br>
-<li> 
-<b><a href="https://meetings.ams.org/math/spring2022w/meetingapp.cgi">AMS Special Session on Recent Advances on the Langlands Program </a> </b>(Invited talk)
-<br> Dimensions for the spaces of Siegel cusp forms of degree 2 and level 4, May 15, 2022.
-</li> 
-<br>
-<li> 
-<b><a href="https://researchseminars.org/seminar/ExplicitModularity"> Explicit Methods for Modularity</a>, ICERM / MIT </b> (Invited talk).
-<br> Dimensions for the spaces of Siegel cusp forms of Klingen level 4, April 12, 2022 
-</li>
-<br>
- <li> 
-<b><a href=https://www.jointmathematicsmeetings.org/meetings/national/jmm2022/2268_program_ss26.html#title> AMS Special Session on A Showcase of Number Theory at Undergraduate Institutions</a>, Joint Mathematics Meetings 2022 </b>(Invited talk)
-   <br>  
-<b>The functional equation for completed standard
-L-function of modular forms on G_2, </b> April 7, 2022.
-   </li>
-<br>
-<li> 
-<b><a href="https://www.jointmathematicsmeetings.org/meetings/national/jmm2022/2268_program_ss97.html#title"> AMS Special Session on Rethinking Number Theory</a>, Joint Mathematics Meetings 2022</b>
-<br> Tamagawa numbers for rational elliptic curves with
-non-trivial torsion, April 6, 2022.
-</li>
-<br>
- <li> 
-<b><a href=https://www2.mathematik.tu-darmstadt.de/~international_seminar/> International Seminar on
-Automorphic Forms</a></b> (Invited talk)
-<br>Dimensions for the spaces of Siegel cusp forms of level 4, December 7, 2021.
-    </li>
-<br>
- <li> 
-<b><a href=https://math.jhu.edu/~aiyenga5/seminar.php> Johns Hopkins Number Theory Seminar</a></b> (Invited talk)
- <br>Counting cuspidal automorphic representations of GSp(4) and dimensions of Siegel cusp forms, November 17, 2021.
- </li>
-<br>
-   <li> 
-<b><a href=https://math.oregonstate.edu/numbertheory_seminar> Oregon State University Number Theory Seminar</a></b> (Invited talk)
-        </li>
-<br>Congruences for dimensions of spaces of Siegel cusp forms and 4-core partitions, November 2, 2021.
-  <li> 
-<b><a href=http://www.math.union.edu/~hatleyj/Upstate2021/Upstate2021.html> 
-Upstate Number Theory Conference </a></b>
-<br>Tamagawa numbers and torsion for rational elliptic curves, October 23, 2021.	  
-        </li>
-<br>
- <li> 
-<b><a href=https://www.math.clemson.edu/numbertheory/pajamas-iii/>PAJAMAS III</a></b> 
-  <br>Rational elliptic curves with non-trivial torsion, September 26, 2021.  
- </li>
-<br>
- <li> 
-<b><a href=https://archimede.mat.ulaval.ca/QUEBEC-MAINE/>Maine-Québec Number Theory Conference</a></b> 
-  <br>Local data for rational elliptic curves with non-trivial torsion, October 3, 2021.
- </li>
-<br>
-   <li> 
-<b><a href=https://pages.pomona.edu/%7Eehga2017/prime.html>PRiME (Pomona Research in Mathematics Experience)</a></b> (Invited talk)
-<br>Elliptic curves and modularity, July 30, 2021 
-</li>
-<br>
-   <li> 
-<b><a href=https://researchseminars.org/seminar/QMULANTS>Queen Mary University of London Algebra and Number Theory Seminar</a></b> (Invited talk)
- <br>Counting cuspidal automorphic representations of GSp(4), March 12, 2021.
-</li>
-<br>
-   <li> 
-<b><a href=https://research.math.osu.edu/numbertheory/>The Ohio State University
-Number Theory Seminar</a> </b>(Invited talk)
-<br>Counting cuspidal automorphic representations of GSp(4) and its application, February 15, 2021.
-   </li>
-<br>
-   <li> 
-<b>Number Theory, Cryptography, and Coding Theory Seminar, Clemson University</b> (Invited talk)
-<br> Local data of rational elliptic curves with non-trivial torsion, January 25, 2021.   
-</li>
-<br> 
-<li> 
- Number Theory Seminar, Queen's University (Invited talk)
-<br>An equidistribution result for cuspidal automorphic representations of GSp(4), January 22, 2021.  
-  </li>
-  <br>
-   <li> 
- <b>Challenges and usefulness of creating a database of groups in LMFDB</b>, December 8, 2020 
-<br>
-<b><a href="https://sites.google.com/view/vantageseminar">VaNTAGe Math </a></b> (Invited talk).
-        </li>
-<br>
-   <li> 
- <b>On some equidistribution theorems</b>, November 5, 2020 
-<br>
-<b><a href="https://sites.google.com/fordham.edu/fordhamlcmathseminar/home">Fordham Math Seminar</a></b>, Fordham University.
-        </li>
-<br>
-   <li> 
- <b>An equidistribution theorem for automorphic representations of GSp(4)</b>, November 3, 2020  
-<br>
-<b><a href="https://www.math.lsu.edu/calendar?selecttime=all_future&selectevent=Algebra%2Band%2BNumber%2BTheory%2BSeminar">Algebra and Number Theory Seminar</a></b>, Louisiana State University (Invited talk).
-        </li>
-	<br>
-   <li> 
- <b>On counting automorphic representations and its connection to an equidistribution theorem for GSp(4)</b>, October 23, 2020
-<br>
-<b><a href="https://math.unt.edu/events/algebra-seminar-dr-manami-roy-and-dr-shaoyun-yi">Algebra Seminar</a></b>,  University of North Texas (Invited talk).
-        </li>
-  <br>
-   <li> 
- <b>
-On local data of rational elliptic curves with non-trivial torsion,</b> September 26, 2020
-<br>
-Lighting talk at <b><a href="https://sites.google.com/wisc.edu/madisonmoduliweekend/schedule?authuser=0">Madison Moduli Weekend</a></b>, University of Wisconsin-Madison.
-        </li>
-	<br>
-   <li> 
- <b>
-Local representations attached to rational elliptic curves with 
-non-trivial torsion subgroups</b>, June 2, 2020
-<br>
-Lighting talk at <b><a href="https://icerm.brown.edu/events/sc-20-agntc/">Workshop on Arithmetic Geometry, Number theory and Computation</a></b>, ICERM.
-   </li>
- <br>	
-   <li> 
- <b>Local representations attached to elliptic curves</b>, November 2, 2019
-<br>
-<b><a href="https://sites.google.com/view/maaim/home">MAAIM</a></b>,  Emory University.
-        </li>
-<br>
-  <br>
-   <li> 
- <b>Paramodular forms coming from elliptic curves</b>, October 11, 2019
-<br>
-<b><a href="https://fsw01.bcc.cuny.edu/cormac.osullivan/Research/number_theory.html">Study group in number theory</a></b>, the Gradute Center, CUNY (Invited talk).
-        </li>
-  <br>
-  <br>
-   <li> 
- <b>Elliptic Curves and Paramodular Forms</b>, January 18, 2019
-<br>
-<b><a href="https://jointmathematicsmeetings.org/meetings/national/jmm2019/2217_program_friday.html#2217:AMSCP29">AMS Contributed Paper Session on Number Theory, III</a></b>, Joint Mathematics Meetings 2019 
-        </li>
-  <br>
-  <br>
-   <li> 
- <b>Some paramodular forms connected with elliptic curves</b>, January 18, 2019
-  <br>
-<b><a href="https://jointmathematicsmeetings.org/meetings/national/jmm2019/2217_program_friday.html">AWM Workshop: Poster Presentations by Women Graduate Students</a></b>, Joint Mathematics Meetings 2019 
-        </li>
-  <br>
-  <br>
-   <li> 
- <b>Level of Siegel modular forms of degree 2 coming from the sym^3 lifting</b>, April 3, 2017
-<br>
-<b><a href="https://www.math.clemson.edu/ccnt/event/manami-roy-university-of-oklahoma-2/">RTG - Coding, Cryptography and Number Theory (CCNT) Seminar</a></b>,
-Clemson University (Invited talk). 
-        </li>
-<br>
-<br>
-   <li> 
- <b> An introduction to the principle of functoriality</b>, April 3, 2017
-<br>
-<b><a href="https://www.math.clemson.edu/ccnt/event/manami-roy-university-of-oklahoma-2/">RTG - Coding, Cryptography and Number Theory (CCNT) Seminar</a></b>,
-Clemson University (Invited talk). 
-        </li>
+   </ul>
 
-         </ul>
 	</div>
 </div>
 	<div id="footer" class="footer">   
                 <p>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<b><font size="3"><a href="Resources.html">Resources</a></font>
-</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
+<b><font size="3"><a href="Resources.html">Resources</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<b><font size="3"><a href="Talks.html">Talks</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <b><font size="3"><a href="Activities.html">Activities</a></font>
 </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="Research.html">Research</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="Teaching.html">Teaching</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"><b><b><font size="3">Home<b></font></b></a> </p>
         </div>
