--- a/Research.html
+++ b/Research.html
@@ -84,7 +84,7 @@
 	<div id="nav" class="nav">
 		<a href="index.html">Home</a>&nbsp;&nbsp;
                 <a href="Teaching.html">Teaching</a>&nbsp;&nbsp;	
-	        <a class="selected">Research</a>&nbsp;&nbsp;  
+	        <a class="selected">Research</a>&nbsp;&nbsp;<a href="Talks.html">Talks</a>&nbsp;&nbsp; 
  <a href="Activities.html">Activities</a>&nbsp;&nbsp;  
                 <a href="Resources.html">Resources</a>&nbsp;&nbsp;	
         </div>
@@ -189,8 +189,8 @@ Contemp. Math.,<b>732</b> (2019), 225-227, <a href="https://doi.org/10.1090/conm
 </div>
 	<div id="footer" class="footer">   
                 <p>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<b><font size="3"><a href="Resources.html">Resources</a></font>
-</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
+<b><font size="3"><a href="Resources.html">Resources</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<b><font size="3"><a href="Talks.html">Talks</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <b><font size="3"><a href="Activities.html">Activities</a></font>
 </b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="Research.html">Research</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="Teaching.html">Teaching</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="index.html"><b><b><font size="3">Home<b></font></b></a> </p>
         </div>
