--- a/index.html
+++ b/index.html
@@ -91,10 +91,11 @@
 
 	<div id="nav" class="nav">
 		<a class="selected">Home</a>&nbsp;&nbsp;
-                <a href="./Teaching">Teaching</a>&nbsp;&nbsp;
-                <a href="./Research">Research</a>&nbsp;&nbsp;	
- <a href="./Activities">Activities</a>&nbsp;&nbsp;  
-                <a href="./Resources">Resources</a>&nbsp;&nbsp;
+                <a href="Teaching.html">Teaching</a>&nbsp;&nbsp;
+                <a href="Research.html">Research</a>&nbsp;&nbsp;
+                <a href="Talks.html">Talks</a>&nbsp;&nbsp; 	
+ <a href="Activities.html">Activities</a>&nbsp;&nbsp;  
+                <a href="Resources.html">Resources</a>&nbsp;&nbsp;
 	</div>	
 <div class="container">
 	<div class="side">
@@ -117,10 +118,10 @@
 </div>
 	<div id="footer" class="footer">   
                 <p>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<b><font size="3"><a href="./Resources">Resources</a></font>
-</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp
-<b><font size="3"><a href="./Activities">Activities</a></font>
-</b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="./Research">Research</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="./Teaching">Teaching</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index"><b><b><font size="3">Home<b></font></b></a> </p>
+<b><font size="3"><a href="./Resources">Resources</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<b><font size="3"><a href="./Talks">Talks</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<b><font size="3"><a href="./Activities">Activities</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<b><font size="3"><a href="./Research">Research</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b><font size="3"><a href="./Teaching">Teaching</a></font></b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="./index"><b><b><font size="3">Home<b></font></b></a> </p>
         </div>
 
 </body>
