--- a/Teaching.html
+++ b/Teaching.html
@@ -94,7 +94,7 @@
 <div class="container">	
 <div class="content">
 
-In Spring 2024, I am teaching Discrete Structures (MATH182-01 and MATH182-02). All the course materials are available on respective Moodle course pages.
+In Fall 2024, I am teaching Calculus I (Math 161) and Abstract Algebra (MATH 351). All the course materials are available on respective Moodle course pages.
 
 <h3>Past Teaching Experience:</h3>
 <h4><u>Lafayette College:</u></h4>
@@ -102,6 +102,10 @@ In Spring 2024, I am teaching Discrete Structures (MATH182-01 and MATH182-02). A
 <tr>
 <td width="20%"><b>Semester</b></td>
 <td width="40%"><b>Course Name</b></td>
+</tr>
+<tr>
+<td> Spring 2024 </td>
+<td>Discrete Structures</td>
 </tr>
 <tr>
 <td> Fall 2023 </td>
