--- a/Talks.html
+++ b/Talks.html
@@ -101,16 +101,30 @@
         <div class="block">
 	<h3> Upcoming talks:</h3>
 	<ul>
-<li>
-     <b><a href="https://www.math.unt.edu/~richter/TORA/TORA13.html">TORA XIII</a></b>, University of North Texas, April 12-14, 2024.
+		<li>
+     <b><a href="https://jointmathematicsmeetings.org/meetings/national/jmm2025/2314_special.html">JMM AMS Special Session on Rethinking Number Theory</a></b>, JMM 2025, January 10, 2025.
+</li>	
+	
+	<li>
+     <b><a href="https://www.ams.org/meetings/sectional/2317_program_ss24.html#title">Special Session on Recent Developments in Automorphic Forms and Representation Theory</a></b>, AMS 2024 Fall Eastern Sectional Meeting, University at Albany, October 19-20, 2024.
 </li>
-<br>        
 <li>
-     <b><a href="https://www.math.lsu.edu/~srntc/nt2024/">Southern Regional Number Theory Conference 2024</a></b>, Louisiana State University, March 9-11, 2024.
-</li>
+     <b>Algebra and Number Theory Seminar, wesleyan university </b>, October 18, 2024.
+</li>		
     </ul>
 	<h3>Recent talks:</h3>
 	<ul>
+		<li>
+     <b><a href="https://sites.google.com/view/iclant/home">International Conference on Lie Algebras and Number Theory</a></b>, NIT Calicut, Jun 13, 2024.
+</li>
+		
+<li>
+     <b><a href="https://www.math.unt.edu/~richter/TORA/TORA13.html">TORA XIII</a></b>, University of North Texas, April 14, 2024.
+</li>
+<br>        
+<li>
+     <b><a href="https://www.math.lsu.edu/~srntc/nt2024/">Southern Regional Number Theory Conference 2024</a></b>, Louisiana State University, March 9, 2024.
+</li>		
 <li>
      <b>Algebra and Number Theory Seminar, Oregon State University</b>, Nov 7, 2023.
 </li>
