--- a/Research.html
+++ b/Research.html
@@ -107,8 +107,8 @@ over global and local fields</i> on the arithmetic geometry side. Another part o
  </li> 
 <br>
 See the articles <a href="https://arxiv.org/abs/2401.15277v1">4</a>,
-	<a href="https://arxiv.org/abs/2207.02747">5</a>, <a href="https://arxiv.org/abs/2202.13253">6</a>,
-	<a href="https://arxiv.org/abs/2109.07649">7</a>, <a href="https://arxiv.org/abs/2104.09448">8</a>, <a href="https://arxiv.org/abs/2104.09710">11</a>,<a href="https://arxiv.org/abs/2010.09996">10</a> listed below.
+	<a href="https://arxiv.org/abs/2202.13253">5</a>,
+	<a href="https://arxiv.org/abs/2109.07649">6</a>, <a href="https://arxiv.org/abs/2207.02747">7</a>, <a href="https://arxiv.org/abs/2104.09448">8</a>, <a href="https://arxiv.org/abs/2104.09710">11</a>,<a href="https://arxiv.org/abs/2010.09996">10</a> listed below.
 <br><br>
  <li> 
  	<b>On elliptic curves over number fields and local fields.</b> </li>
@@ -148,10 +148,6 @@ See the articles <a href="https://arxiv.org/abs/2106.15722">9</a>, <a href="http
         </li>
 
 <br>
-  <li><b><a href="https://arxiv.org/abs/2207.02747">Dimension formulas for Siegel modular forms of level 4</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://shaoyunyi.gitee.io/shaoyun/">Shaoyun Yi</a>, and with an appendix "Modular forms of Klingen level 4 and small weight" by Cris Poor and David Yuen),
-      Mathematika <b>69</b> (2023), no. 3, 795-840, <a href="https://doi.org/10.1112/mtk.12207"> DOI</a>.
-        </li>
-<br>
 
   <li><b><a href="https://arxiv.org/abs/2202.13253">Generalized Ramanujan-Sato Series Arising from Modular Forms</a></b> (with <a href="https://angelicababei.com/">Angelica Babei</a> , <a href="https://sites.google.com/view/lea-beneish/home">Lea Beneish </a>, <a href="https://sites.google.com/view/hollyswisher/home">Holly Swisher</a>, <a href="http://www.bellatobin.com/">Bella Tobin</a>, and <a href="">Fang-Ting Tu</a>).
 	  In: Bucur, A., Ho, W., Scheidler, R. (eds) Research Directions in Number Theory. Association for Women in Mathematics Series, vol 33. (2024), Springer, Cham, <a href="https://doi.org/10.1007/978-3-031-51677-1_3"> DOI</a>. 
@@ -159,8 +155,12 @@ See the articles <a href="https://arxiv.org/abs/2106.15722">9</a>, <a href="http
 <br>
   <li><b><a href="https://arxiv.org/abs/2109.07649">Classical and adelic Eisenstein series</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://shaoyunyi.gitee.io/shaoyun/">Shaoyun Yi</a>).
       <br>Preprint, 2024, (to appear in Rocky Mountain J. Math).
-        </li>
+        </li>	
 <br>
+  <li><b><a href="https://arxiv.org/abs/2207.02747">Dimension formulas for Siegel modular forms of level 4</a></b> (with <a href="https://www.math.unt.edu/~schmidt/">Ralf Schmidt</a> and <a href="https://shaoyunyi.gitee.io/shaoyun/">Shaoyun Yi</a>, and with an appendix "Modular forms of Klingen level 4 and small weight" by Cris Poor and David Yuen),
+      Mathematika <b>69</b> (2023), no. 3, 795-840, <a href="https://doi.org/10.1112/mtk.12207"> DOI</a>.
+        </li>
+<br>	
   <li><b><a href="https://arxiv.org/abs/2104.09448">The completed standard L-function of modular forms on G_2</a></b> (with Fatma Çiçek, Giuliana Davidoff, <a href="https://sarahdijols.github.io">Sarah Dijols</a>, Trajan Hammonds, and <a href="https://www.math.ucsd.edu/~apollack/">Aaron Pollack</a>).
       <br>Mathematische Zeitschrift <b>302</b> (2022), 483–517, <a href="https://doi.org/10.1007/s00209-022-03067-8"> DOI</a>. 
         </li>
