--- a/Research.html
+++ b/Research.html
@@ -131,7 +131,7 @@ See the articles <a href="https://arxiv.org/abs/2106.15722">9</a>, <a href="http
 
 <ol>
  <li><b><a href="arXiv:2409.09189">Creating a dynamic database of finite groups</a>(with Lewis Combes, John W. Jones, Jennifer Paulhus, David Roe, and Sam Schiavone)
-      <br>Preprint, 2024, (Submitted).
+      <br>Preprint, 2024.
 </li>
 <br>	
  <li><b><a href="arXiv:2403.01287">Towards a classification of p^2-discriminant ideal twins over number fields</a>(with Alyson Deines, Asimina S. Hamakiotes, Andreea Iorga, Changningphaabi Namoijam, and Lori D. Watson)
